--- a/css/custom.css
+++ b/css/custom.css
@@ -49,6 +49,7 @@ http://work.smarchal.com/twbscolor/
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
   border-color: #ecf0f1;
+  font-size: 0.9em;
 }
 .navbar-default .navbar-link {
   color: #ecf0f1;
@@ -70,6 +71,9 @@ http://work.smarchal.com/twbscolor/
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
     color: #ecdbff;
     background-color: #2980b9;
+  }
+  .navbar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+    margin-left: -15px;
   }
 }
 
